# overlay

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  DESIGN.md  README.md  flake.nix  mixin.schema.json  mixinv2.schema.json  pyproject.toml  specification.md
.github/workflows/: ci.yml
dev/: flake.nix
inheritance-calculus/: inheritance-calculus.tex  mixin_totality.tex  references.bib
mixin-calculus/: latexmkrc  mixin-calculus.bib  mixin-calculus.tex  mixin_totality.tex  overlay-calculus.tex  preprint.tex
mixinv2/: README.md  pyproject.toml
mixinv2-library/: pyproject.toml
mixinv2-library/src/mixinv2_library/Builtin/: BinNatData.oyaml  BooleanEquality.oyaml  BooleanNegation.oyaml  BooleanVisitor.oyaml  __init__.py
mixinv2/docs/: Makefile  conf.py  index.rst  installation.rst  mixinv2-tutorial.rst  specification.md
mixinv2/src/mixinv2/: _mixin_parser.py  _runtime.py
modules/: jupyter.nix  lib.nix  python.nix  tests.nix  texlive.nix
overlay-calculus/: overlay-calculus.tex  references.bib  submission.tex
overlay-language/: .readthedocs.yaml  README.md  pyproject.toml
overlay-language/docs/: conf.py  index.rst  installation.rst  overlay-language-tutorial.rst  specification.md  tutorial.rst
overlay-language/src/overlay/language/: __init__.py  _core.py  _interned_linked_list.py  _mixin_directory.py  _mixin_parser.py  _runtime.py  mixin_directory.py  mixin_parser.py  runtime.py
overlay-library/: pyproject.toml
src/mixinject/: __init__.py  config.py  interned_linked_list.py  mixin_directory.py  mixin_parser.py  runtime.py  stdlib.mixin.yaml  v2.py
stdlib/: stdlib.mixin.yaml
tests/: BinNatArithmeticTest.mixin.yaml  BinNatArithmeticTest.overlay.yaml  CartesianProductTest.mixin.yaml  ChurchBooleanTest.mixin.yaml  FibonacciTest.oyaml  LetXEqualsXInX.mixin.yaml  arithmetic_test.mixin.yaml  snapshot.json  test_bin_nat_arithmetic.py  test_cartesian_product.py  test_church_boolean.py  test_circular_lazy.py  test_debug.py  test_evaluation_semantics.py  test_fibonacci.py  test_fibonacci_cartesian_product.py  test_fixme_repro.py  test_get_symbol.py  test_interned_linked_list.py  test_mixin_parser.py  test_mixinject.py  test_multi_module_composition.py  test_nat_arithmetic.py  test_nested_lexical_scope.py  test_outer_vs_lexical_outer.py  test_readme_examples.py  test_readme_package_examples.py  test_resolve_dependencies.py  test_resource_reference.py  test_stdlib.mixin.yaml  test_stdlib.py  test_stdlib_python_port.py  test_symbol_table_algorithm.py  test_v2.py
tests/__snapshots__/: test_multi_module_composition.ambr
tests/fixtures/: circular_lazy.mixin.yaml  multi_module_composition.mixin.yaml
tests/fixtures/app_di/: __init__.py  eager_database.py  sqlite_database.py
tests/fixtures/app_di/http_handlers/: __init__.py
tests/fixtures/app_di/http_handlers/request_scope/: __init__.py
tests/fixtures/app_di/network_server/: __init__.py
tests/fixtures/app_di/pragmas/: base.py  foreign_keys.py  user_version.py  wal_mode.py
tests/fixtures/app_di/user_repository/: __init__.py
tests/fixtures/app_di/user_repository/request_scope/: __init__.py
tests/fixtures/app_di/user_repository/user/: __init__.py
tests/fixtures/app_oyaml/: Apps.oyaml  AsyncApps.oyaml  Library.oyaml  __init__.py
tests/fixtures/app_oyaml/async_ffi/: __init__.py
tests/fixtures/app_oyaml/async_ffi/FFI/: ExtractUserId.py  FormatResponse.py  GetItem.py  HttpRequestExtern.py  HttpSendResponse.py  HttpServerCreate.py  SqliteConnectAndExecuteScript.py  SqliteRowQuery.py  SqliteScalarQuery.py  TupleWrap.py  __init__.py  _async_resource.py
tests/fixtures/app_oyaml/async_ffi/FFI/HttpHandlerClass/: __init__.py
tests/fixtures/app_oyaml/stdlib_ffi/: __init__.py
tests/fixtures/app_oyaml/stdlib_ffi/FFI/: ExtractUserId.py  FormatResponse.py  GetItem.py  GetPath.py  HttpEndHeaders.py  HttpRequestExtern.py  HttpSendResponse.py  HttpSendStatus.py  HttpServerCreate.py  HttpWriteBody.py  IntParse.py  SequenceLast.py  SqliteConnect.py  SqliteConnectAndExecuteScript.py  SqliteExecuteScript.py  SqliteRowQuery.py  SqliteScalarQuery.py  StringEncode.py  StringFormatMap.py  StringSplit.py  TupleWrap.py  __init__.py
tests/fixtures/app_oyaml/stdlib_ffi/FFI/HttpHandlerClass/: __init__.py
tests/fixtures/app_oyaml/stdlib_ffi/FFI/HttpHandlerClass/RequestScope/: __init__.py
tests/fixtures/nested_pkg/: __init__.py
tests/fixtures/nested_pkg/child/: __init__.py  grandchild.py
tests/fixtures/ns_pkg/: mod_a.py  mod_b.py
tests/fixtures/regular_pkg/: __init__.py  child.py
tests/fixtures/union_mount/: __init__.py  branch0.py  branch1.py  branch2.py
tests/src/: binary_natural.mixin.yaml  binary_trie.mixin.yaml  church.mixin.yaml  continuation.mixin.yaml  expression_problem.mixin.yaml  foo.mixin.yaml
