[project]
name = "mixinject"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyter-collaboration==4.0.2",
    "jupyter-mcp-server>=0.18.2",
    "jupyter-mcp-tools>=0.1.4",
    "jupyterlab==4.4.1",
    "limited-shell>=0.10.10",
    "nbconvert>=7.16.6",
    "ordered-set>=4.1.0",
    "papermill>=2.6.0",
    "py-spy>=0.4.1",
    "pyflyby>=1.10.2",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.2.0",
    "pytest-freezegun>=0.4.2",
    "pytest-frozen-uuids>=0.3.5",
    "pytest-randomly>=4.0.1",
    "pytest-recording>=0.13.4",
    "ruff>=0.14.3",
    "syrupy>=5.0.0",
    "vcrpy>=7.0.0",
]

[tool.pyright]
include = ["src", "tests"]
