[project]
name = "overlay"
version = "0.1.0"
description = "A dependency injection framework with pytest-fixture syntax, plus a configuration language for declarative programming"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    {name = "Yang, Bo", email = "yang-bo@yang-bo.com"},
]
keywords = ["overlay", "mixin", "composition", "dependency-injection"]
dependencies = [
    "overlay.language",
    "overlay.library",
]

[project.urls]
Repository = "https://github.com/Atry/overlay"

[tool.uv]
sources = {overlay-language = {workspace = true}, overlay-library = {workspace = true}}
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]
# Note: uv source keys use normalized names (dashes) even when project names use dots

[tool.uv.workspace]
members = ["overlay-language", "overlay-library"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyter-collaboration==4.0.2",
    "jupyter-mcp-server>=0.18.2",
    "jupyter-mcp-tools>=0.1.4",
    "jupyterlab==4.4.1",
    "limited-shell>=0.10.10",
    "nbconvert>=7.16.6",
    "ordered-set>=4.1.0",
    "papermill>=2.6.0",
    "py-spy>=0.4.1",
    "pyflyby>=1.10.2",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.2.0",
    "pytest-freezegun>=0.4.2",
    "pytest-frozen-uuids>=0.3.5",
    "pytest-randomly>=4.0.1",
    "pytest-recording>=0.13.4",
    "ruff>=0.14.3",
    "sphinx>=9.1.0",
    "sphinx-mdinclude>=0.6.2",
    "starlette>=0.50.0",
    "syrupy>=5.0.0",
    "vcrpy>=7.0.0",
]

[tool.pyright]
include = ["overlay-language/src", "overlay-library/src", "tests"]
