[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0", "editables"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = false
fallback-version = "0.1.0"
metadata = false

[project]
name = "overlay.language"
dynamic = ["version"]
description = "A dependency injection framework with pytest-fixture syntax, plus a configuration language for declarative programming"
license = "MIT"
requires-python = ">=3.13"
authors = [
    {name = "Yang, Bo", email = "yang-bo@yang-bo.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
docs = [
    "sphinx>=9.1.0",
    "sphinx-mdinclude>=0.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/overlay"]
only-include = ["src/overlay/language"]
sources = ["src"]

[project.urls]
Repository = "https://github.com/Atry/overlay"
